--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,20 @@
+/* utils tailwind is here brooo...!! */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* import fonts here brooo...!!! */
+@font-face {
+  font-family: "Bely";
+  src: url("./Bely.ttf");
+}
+@font-face {
+  font-family: "Inter";
+  src: url("./Inter.ttf");
+}
+@font-face {
+  font-family: "Jost";
+  src: url("./Jost.ttf");
+}
 
 html,
 body {
@@ -28,3 +42,54 @@ a {
     background: black;
   }
 } */
+
+.ProseMirror {
+  padding: 0.75em;
+}
+
+.ProseMirror > * + * {
+  margin-top: 0.75em;
+}
+.ProseMirror ul,
+.ProseMirror ol {
+  padding: 0 1rem;
+}
+.ProseMirror h1,
+.ProseMirror h2,
+.ProseMirror h3,
+.ProseMirror h4,
+.ProseMirror h5,
+.ProseMirror h6 {
+  line-height: 1.1;
+  color: red;
+}
+.ProseMirror code {
+  background-color: rgba(97, 97, 97, 0.1);
+  color: #616161;
+}
+.ProseMirror pre {
+  background: #0d0d0d;
+  color: #fff;
+  font-family: "JetBrainsMono", monospace;
+  padding: 0.75rem 1rem;
+  border-radius: 0.5rem;
+}
+.ProseMirror pre code {
+  color: inherit;
+  padding: 0;
+  background: none;
+  font-size: 0.8rem;
+}
+.ProseMirror img {
+  max-width: 100%;
+  height: auto;
+}
+.ProseMirror blockquote {
+  padding-left: 1rem;
+  border-left: 2px solid rgba(13, 13, 13, 0.1);
+}
+.ProseMirror hr {
+  border: none;
+  border-top: 2px solid rgba(13, 13, 13, 0.1);
+  margin: 2rem 0;
+}
